--- a/node.html
+++ b/node.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
-    RED.nodes.registerType('eksido-monoloop',{
+    RED.nodes.registerType('monoloop',{
         category: 'Input',
-        color: '#4e9b01',
+        color: '#ffffff',
         defaults: {
             name: {value:""},
             accountid: {value:""},
@@ -13,7 +13,7 @@
         outputs:1,
         icon: "envelope.png",
         align: "right",
-        label: function() { return this.name||"eksido-monoloop"; }, 
+        label: function() { return this.name||"monoloop"; }, 
         credentials: {
             accountid: {type:"text"},
             apikey: {type:"password"},
@@ -23,7 +23,7 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="eksido-monoloop">
+<script type="text/x-red" data-template-name="monoloop">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> name </label>
         <input type="text" id="node-input-name" placeholder="name">
@@ -47,6 +47,6 @@
 
 </script>
 
-<script type="text/x-red" data-help-name="eksido-monoloop">
+<script type="text/x-red" data-help-name="monoloop">
   Help text eksido-monoloop eksido-monoloop
 </script>
