--- a/node.html
+++ b/node.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('monoloop',{
-        category: 'Input',
+        category: 'Website',
         color: '#ffffff',
         defaults: {
             name: {value:""},
