--- a/monoloop.html
+++ b/monoloop.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('monoloop',{
-        category: 'Website',
+        category: 'config',
         color: '#ffffff',
         defaults: {
             name: {value:""},
@@ -9,11 +9,9 @@
             username: {value:""},
             password: {value:""}
         },
-        inputs:1,
-        outputs:1,
-        icon: "envelope.png",
-        align: "right",
-        label: function() { return this.name||"monoloop"; }, 
+        label: function() { 
+            return this.name||"monoloop"; 
+        }, 
         credentials: {
             accountid: {type:"text"},
             apikey: {type:"password"},
@@ -25,28 +23,28 @@
 
 <script type="text/x-red" data-template-name="monoloop">
     <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> name </label>
+        <label for="node-config-input-name"><i class="icon-tag"></i> name </label>
         <input type="text" id="node-input-name" placeholder="name">
     </div>
     <div class="form-row">
-        <label for="node-input-accountid"><i class="icon-tag"></i> accountid</label>
-        <input type="text" id="node-input-accountid">
+        <label for="node-config-input-accountid"><i class="icon-tag"></i> accountid</label>
+        <input type="text" id="node-config-input-accountid">
     </div>
     <div class="form-row">
-        <label for="node-input-apikey"><i class="icon-tag"></i> apikey</label>
-        <input type="password" id="node-input-apikey">
+        <label for="node-config-input-apikey"><i class="icon-tag"></i> apikey</label>
+        <input type="password" id="node-config-input-apikey">
     </div>
     <div class="form-row">
-        <label for="node-input-username"><i class="icon-tag"></i> Username</label>
-        <input type="text" id="node-input-username">
+        <label for="node-config-input-username"><i class="icon-tag"></i> Username</label>
+        <input type="text" id="node-config-input-username">
     </div>
     <div class="form-row">
-        <label for="node-input-password"><i class="icon-tag"></i> Password</label>
-        <input type="password" id="node-input-password">
+        <label for="node-config-input-password"><i class="icon-tag"></i> Password</label>
+        <input type="password" id="node-config-input-password">
     </div>
 
 </script>
 
 <script type="text/x-red" data-help-name="monoloop">
-  Help text eksido-monoloop eksido-monoloop
+  Write support@monoloop.com for support
 </script>
