--- a/monoloop.html
+++ b/monoloop.html
@@ -7,7 +7,7 @@
             apikey: {value:""}
         },
         label: function() { 
-            return this.name||"Monoloop Node"; 
+            return this.name || "Monoloop"; 
         }, 
         credentials: {
             accountid: {type:"text"},
@@ -22,15 +22,15 @@
         <input type="text" id="node-input-name" placeholder="name">
     </div>
     <div class="form-row">
-        <label for="node-config-input-accountid"><i class="icon-tag"></i> accountid</label>
+        <label for="node-config-input-accountid"><i class="icon-tag"></i>accountid</label>
         <input type="text" id="node-config-input-accountid">
     </div>
     <div class="form-row">
-        <label for="node-config-input-apikey"><i class="icon-tag"></i> apikey</label>
+        <label for="node-config-input-apikey"><i class="icon-tag"></i>apikey</label>
         <input type="password" id="node-config-input-apikey">
     </div>
 </script>
 
 <script type="text/x-red" data-help-name="monoloop">
-  Write support@monoloop.com for support
+  For support go to our <a href="https://eksido.atlassian.net/servicedesk/customer/portals"> Customer Success Portal </a>
 </script>
