Update category to web

--- a/monoloop.html
+++ b/monoloop.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('monoloop',{
-        category: 'config',
+        category: 'web',
         color: '#ffffff',
         defaults: {
             accountid: {value:""},
