--- a/monoloop.html
+++ b/monoloop.html
@@ -7,20 +7,19 @@
             apikey: {value:""}
         },
         label: function() { 
-            return this.name || "Monoloop"; 
+            return this.name || "Monoloop Config"; 
         }, 
         credentials: {
             accountid: {type:"text"},
             apikey: {type:"password"}
         },
-        inputs:1,
+        inputs:0,
         outputs:0,
-        icon: "envelope.png",
-        align: "right"
+        align: "center"
     });
 </script>
 
-<script type="text/x-red" data-template-name="monoloop">
+<script type="text/x-red" data-template-name="monoloop-config">
     <div class="form-row">
         <label for="node-config-input-name"><i class="icon-tag"></i>name</label>
         <input type="text" id="node-input-name" placeholder="name">
