--- a/monoloop.html
+++ b/monoloop.html
@@ -22,7 +22,7 @@
 <script type="text/x-red" data-template-name="monoloop-config">
     <div class="form-row">
         <label for="node-config-input-name"><i class="icon-tag"></i>name</label>
-        <input type="text" id="node-input-name" placeholder="name">
+        <input type="text" id="node-config-input-name" placeholder="name">
     </div>
     <div class="form-row">
         <label for="node-config-input-accountid"><i class="icon-tag"></i>accountid</label>
