--- a/monoloop.html
+++ b/monoloop.html
@@ -29,6 +29,31 @@
 </script>
 
 
+script type="text/javascript">
+    RED.nodes.registerType('monoloop-profile',{
+        category: 'web',
+        color: '#ffffff',
+        defaults: {
+            name: {value:"",required:true},
+            accountid: {value:"",required:true},
+            apikey: {value:"",required:true}
+        },
+        label: function() { 
+            return this.name || "Monoloop Profile"; 
+        }
+    });
+</script>
+
+
+<script type="text/x-red" data-template-name="monoloop-profile">
+    <div class="form-row">
+        <label for="node-input-name"><i class="icon-bookmark"></i> Name</label>
+        <input type="text" id="node-input-name">
+    </div>
+</script>
+
+
+
 <script type="text/x-red" data-help-name="monoloop">
   For support go to our <a href="https://eksido.atlassian.net/servicedesk/customer/portals"> Customer Success Portal </a>
 </script>
